k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ziplink
  labels:
    name: ziplink
    app.kubernetes.io/name: ziplink
    app.kubernetes.io/instance: ziplink
